RESOLVED FIXED174369
Broken build when !USE(REQUEST_ANIMATION_FRAME_DISPLAY_MONITOR)
https://bugs.webkit.org/show_bug.cgi?id=174369
Summary Broken build when !USE(REQUEST_ANIMATION_FRAME_DISPLAY_MONITOR)
Timothy Hatcher
Reported 2017-07-11 10:22:05 PDT
ScriptedAnimationController is using PlatformDisplayID, but that isn't included only when USE(REQUEST_ANIMATION_FRAME_DISPLAY_MONITOR) is true. Patch to follow.
Attachments
Patch (1.09 KB, patch)
2017-07-11 10:24 PDT, Timothy Hatcher
no flags
Timothy Hatcher
Comment 1 2017-07-11 10:24:02 PDT
WebKit Commit Bot
Comment 2 2017-07-11 10:58:26 PDT
Comment on attachment 315124 [details] Patch Clearing flags on attachment: 315124 Committed r219341: <http://trac.webkit.org/changeset/219341>
WebKit Commit Bot
Comment 3 2017-07-11 10:58:27 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.