Broken build when !USE(REQUEST_ANIMATION_FRAME_DISPLAY_MONITOR) https://bugs.webkit.org/show_bug.cgi?id=174369

Reviewed by Alex Christensen.

* dom/ScriptedAnimationController.h: Include PlatformScreen.h.


Canonical link: https://commits.webkit.org/191184@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219341 268f45cc-cd09-0410-ab3c-d52691b4dbfc